# chess-move-validator

./: README.md  pyproject.toml
.github/workflows/: ci.yml
chess_validator/: attacks.py  board.py  cli.py  king_safety.py  move_generator.py  perft.py  pieces.py  utilities.py  validator.py
chess_validator/movement_rules/: __init__.py  bishop.py  king.py  knight.py  pawn.py  rook.py
chess_validator/rules/: bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
src/chess_validator/: __init__.py  attacks.py  board.py  cli.py  king_safety.py  move_generator.py  perft.py  pieces.py  utilities.py  validator.py
src/chess_validator/movement_rules/: __init__.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
tests/: helpers.py  test_attacks.py  test_bishop.py  test_board.py  test_king.py  test_king_safety.py  test_knight.py  test_move_generator.py  test_pawn.py  test_perft.py  test_queen.py  test_rook.py  test_utilities.py  test_validator.py
