[project]
name = "chess-move-validator"
version = "0.1.0"
description = "A Python project for validating legal chess moves with perft testing."
authors = [{ name = "Ryan Broadhurst" }]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
chess-validator = "chess_validator.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
